v0.8.10: autoHttpCompanion startup; ContextServerClient liveness guard; server_transform file-type validation; README updated